# Copyright 2026 Author(s) of MCP Any
# SPDX-License-Identifier: Apache-2.0

load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")
load("@rules_pkg//pkg:mappings.bzl", "pkg_files")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

go_library(
    name = "server_lib",
    srcs = ["main.go"],
    importpath = "github.com/mcpany/core/server/cmd/server",
    visibility = ["//visibility:private"],
    deps = [
        "//server/pkg/app",
        "//server/pkg/appconsts",
        "//server/pkg/config",
        "//server/pkg/doctor",
        "//server/pkg/lint",
        "//server/pkg/logging",
        "//server/pkg/metrics",
        "//server/pkg/update",
        "@com_github_joho_godotenv//:godotenv",
        "@com_github_spf13_afero//:afero",
        "@com_github_spf13_cobra//:cobra",
        "@in_gopkg_yaml_v3//:yaml_v3",
        "@org_golang_x_oauth2//:oauth2",
    ],
)

go_binary(
    name = "server",
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)

pkg_files(
    name = "server_binary_files",
    srcs = [":server"],
    prefix = "/app",
)

pkg_tar(
    name = "server_layer",
    srcs = [":server_binary_files"],
)

oci_image(
    name = "server_image",
    base = "@debian_bookworm_slim",
    entrypoint = ["/app/server"],
    exposed_ports = [
        "50050/tcp",
        "50051/tcp",
    ],
    tars = [":server_layer"],
)

oci_load(
    name = "server_tarball",
    image = ":server_image",
    repo_tags = [
        "mcpany/server:latest",
        "mcpany/server:1.0.0",
    ],
    visibility = ["//visibility:public"],
)

go_test(
    name = "server_test",
    srcs = [
        "exit_code_test.go",
        "main_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":server_lib"],
    deps = [
        "//server/pkg/app",
        "//server/pkg/appconsts",
        "//server/pkg/util",
        "@com_github_spf13_afero//:afero",
        "@com_github_spf13_viper//:viper",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
