# Copyright 2026 Author(s) of MCP Any
# SPDX-License-Identifier: Apache-2.0

load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "app",
    srcs = [
        "api.go",
        "api_alerts.go",
        "api_audit.go",
        "api_auth.go",
        "api_credential.go",
        "api_discovery.go",
        "api_extra.go",
        "api_login.go",
        "api_logs.go",
        "api_secret.go",
        "api_skill_grpc.go",
        "api_skills.go",
        "api_stacks.go",
        "api_system.go",
        "api_templates.go",
        "api_traces.go",
        "api_users.go",
        "api_users_me.go",
        "api_webhooks.go",
        "auth_test_endpoint.go",
        "dashboard.go",
        "dashboard_stats.go",
        "logging_persistence.go",
        "seed.go",
        "seeds.go",
        "seeds_collections.go",
        "server.go",
        "server_init.go",
        "settings.go",
        "template_manager.go",
        "topology.go",
        "user_handlers.go",
        "validator_api.go",
    ],
    importpath = "github.com/mcpany/core/server/pkg/app",
    visibility = ["//visibility:public"],
    deps = [
        "//proto/admin/v1:admin",
        "//proto/api/v1:api",
        "//proto/config/v1:config",
        "//server/pkg/admin",
        "//server/pkg/alerts",
        "//server/pkg/api/rest",
        "//server/pkg/appconsts",
        "//server/pkg/audit",
        "//server/pkg/auth",
        "//server/pkg/bus",
        "//server/pkg/catalog",
        "//server/pkg/config",
        "//server/pkg/discovery",
        "//server/pkg/gc",
        "//server/pkg/health",
        "//server/pkg/logging",
        "//server/pkg/mcpserver",
        "//server/pkg/metrics",
        "//server/pkg/middleware",
        "//server/pkg/pool",
        "//server/pkg/profile",
        "//server/pkg/prompt",
        "//server/pkg/resource",
        "//server/pkg/serviceregistry",
        "//server/pkg/skill",
        "//server/pkg/storage",
        "//server/pkg/storage/postgres",
        "//server/pkg/storage/sqlite",
        "//server/pkg/telemetry",
        "//server/pkg/tokenizer",
        "//server/pkg/tool",
        "//server/pkg/topology",
        "//server/pkg/upstream/factory",
        "//server/pkg/util",
        "//server/pkg/util/passhash",
        "//server/pkg/validation",
        "//server/pkg/webhooks",
        "//server/pkg/worker",
        "@com_github_google_uuid//:uuid",
        "@com_github_gorilla_mux//:mux",
        "@com_github_gorilla_websocket//:websocket",
        "@com_github_grpc_ecosystem_grpc_gateway_v2//runtime",
        "@com_github_improbable_eng_grpc_web//go/grpcweb",
        "@com_github_modelcontextprotocol_go_sdk//mcp",
        "@com_github_pmezard_go_difflib//difflib",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_spf13_afero//:afero",
        "@in_gopkg_yaml_v3//:yaml_v3",
        "@io_k8s_sigs_yaml//:yaml",
        "@io_opentelemetry_go_contrib_instrumentation_google_golang_org_grpc_otelgrpc//:otelgrpc",
        "@io_opentelemetry_go_contrib_instrumentation_net_http_otelhttp//:otelhttp",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_golang_google_grpc//peer",
        "@org_golang_google_grpc//reflection",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//encoding/protojson",
        "@org_golang_google_protobuf//proto",
    ],
)

go_test(
    name = "app_test",
    srcs = [
        "api_alerts_test.go",
        "api_audit_test.go",
        "api_auth_test.go",
        "api_credential_test.go",
        "api_discovery_test.go",
        "api_handlers_extra_test.go",
        "api_login_test.go",
        "api_logs_test.go",
        "api_restart_test.go",
        "api_secret_test.go",
        "api_security_extra_test.go",
        "api_skill_grpc_test.go",
        "api_skills_dos_test.go",
        "api_skills_test.go",
        "api_ssrf_test.go",
        "api_stacks_test.go",
        "api_system_extra_test.go",
        "api_system_test.go",
        "api_templates_test.go",
        "api_test.go",
        "api_traces_limit_test.go",
        "api_traces_test.go",
        "api_users_me_test.go",
        "api_users_security_test.go",
        "api_users_test.go",
        "api_validation_test.go",
        "api_webhooks_test.go",
        "auth_test_endpoint_test.go",
        "auto_discovery_test.go",
        "config_arg_test.go",
        "dashboard_extra_test.go",
        "dashboard_metrics_test.go",
        "dashboard_stats_integration_test.go",
        "dashboard_stats_test.go",
        "dashboard_test.go",
        "logging_persistence_test.go",
        "main_test.go",
        "port_conflict_test.go",
        "seed_test.go",
        "server_init_test.go",
        "server_rbac_test.go",
        "server_test.go",
        "settings_test.go",
        "template_manager_test.go",
        "topology_test.go",
        "user_handlers_test.go",
        "validator_api_test.go",
    ],
    embed = [":app"],
    deps = [
        "//proto/api/v1:api",
        "//proto/bus:bus",
        "//proto/config/v1:config",
        "//proto/mcp_router/v1:mcp_router",
        "//proto/topology/v1:topology",
        "//server/pkg/alerts",
        "//server/pkg/appconsts",
        "//server/pkg/audit",
        "//server/pkg/auth",
        "//server/pkg/bus",
        "//server/pkg/config",
        "//server/pkg/discovery",
        "//server/pkg/health",
        "//server/pkg/logging",
        "//server/pkg/mcpserver",
        "//server/pkg/middleware",
        "//server/pkg/pool",
        "//server/pkg/profile",
        "//server/pkg/prompt",
        "//server/pkg/resource",
        "//server/pkg/serviceregistry",
        "//server/pkg/skill",
        "//server/pkg/storage",
        "//server/pkg/storage/memory",
        "//server/pkg/storage/sqlite",
        "//server/pkg/tool",
        "//server/pkg/topology",
        "//server/pkg/upstream",
        "//server/pkg/upstream/factory",
        "//server/pkg/util/passhash",
        "//server/pkg/validation",
        "//server/pkg/webhooks",
        "@com_github_google_uuid//:uuid",
        "@com_github_gorilla_websocket//:websocket",
        "@com_github_modelcontextprotocol_go_sdk//mcp",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_spf13_afero//:afero",
        "@com_github_spf13_viper//:viper",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//mock",
        "@com_github_stretchr_testify//require",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//encoding/protojson",
        "@org_golang_google_protobuf//proto",
        "@org_golang_x_oauth2//:oauth2",
        "@org_uber_go_mock//gomock",
    ],
)
