# Copyright 2026 Author(s) of MCP Any
# SPDX-License-Identifier: Apache-2.0

load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "bus",
    srcs = [
        "bus.go",
        "message.go",
        "topics.go",
    ],
    importpath = "github.com/mcpany/core/server/pkg/bus",
    visibility = ["//visibility:public"],
    deps = [
        "//proto/bus:bus",
        "//proto/config/v1:config",
        "//server/pkg/bus/kafka",
        "//server/pkg/bus/memory",
        "//server/pkg/bus/nats",
        "//server/pkg/bus/redis",
        "@com_github_puzpuzpuz_xsync_v4//:xsync",
    ],
)

go_test(
    name = "bus_test",
    srcs = [
        "bus_coverage_test.go",
        "bus_provider_test.go",
        "bus_test.go",
    ],
    embed = [":bus"],
    deps = [
        "//proto/bus:bus",
        "@com_github_nats_io_nats_server_v2//server",
        "@com_github_redis_go_redis_v9//:go-redis",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
