# Copyright 2026 Author(s) of MCP Any
# SPDX-License-Identifier: Apache-2.0

load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "cli",
    srcs = ["cli.go"],
    importpath = "github.com/mcpany/core/server/pkg/cli",
    visibility = ["//visibility:public"],
)

go_test(
    name = "cli_test",
    srcs = ["cli_test.go"],
    embed = [":cli"],
)
